<resources>
    <string name="app_name">UP-CHECKLIST</string>

    <string name="prompt_username">Usuario</string>
    <string name="prompt_password">Contraseña</string>

    <string name="action_sign_in">Iniciar sesión</string>

    <string name="empty">No se encontraron datos</string>
    <string name="sin_llenar">Sin Llenar</string>


    <string name="form_part_one">Datos Generales</string>
    <string name="form_part_two">Datos del Conductor</string>
    <string name="form_part_three">DOCUMENTOS DEL CONDUCTOR</string>
    <string name="form_part_four">DOCUMENTOS DE LA UNIDAD</string>
    <string name="form_part_five">REVISIÓN DEL TRACTO</string>
    <string name="form_part_six">REVISIÓN DE LA CISTERNA</string>
    <string name="form_part_seven">KIT ANTIDERRAME DE LA CISTERNA</string>
    <string name="form_part_eigth">EQUIPOS DE PROTECCIÓN PERSONAL</string>
    <string name="form_part_nine">SUMINISTROS Y/O ELEMENTOS DE LIMPIEZA</string>
    <string name="form_part_ten">VERIFICACIÓN DE LLANTAS</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cumple">Cumple</string>
    <string name="hola_mundo">hola mundo</string>
    <string name="todo">TODO</string>
    <string name="entorno">ENTORNO</string>
    <string name="registro_de_fotos_de_evidencia">Registro de Fotos de evidencia:</string>
    <string name="photo">FOTO</string>
    <string name="yes">SI</string>
    <string name="no">NO</string>
    <string name="cancel">CANCELAR</string>
    <string name="update_message_confirm">Para instalar la nueva version debera iniciar sesión nuevamente, sera necesario que permanezca en la pantalla en todo el proceso y siga las instrucciones ¿ Desea proceder ?</string>
    <string name="actualizar_up_checklist">ACTUALIZAR UP-CHECKLIST\n\n (HAY UNA ACTUALIZACIÓN PENDIENTE)</string>
    <string name="continuar">CONTINUAR</string>
    <string name="up_work">UP-WORK</string>
    <string name="checklist">CHECKLIST</string>
    <string name="usuario">USUARIO</string>
    <string name="contrase_a">CONTRASEÑA</string>
    <string name="iniciar_sesi_n">INICIAR SESIÓN</string>
    <string name="pin_de_autenticaci_n_2fa">PIN de autenticación 2FA</string>
</resources>
