<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/petropero">

    <ImageView
        android:id="@+id/settings_env"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/todo"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_settings_24"
        app:tint="@color/colorPrimary" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="351dp"
        android:layout_height="205dp"
        android:contentDescription="@string/todo"
        android:paddingHorizontal="65dp"
        android:src="@drawable/ic_logo_large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/application_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/ubuntu_bold"
        android:text="@string/up_work"
        android:textSize="35sp"
        android:textStyle="bold"
        android:textColor="#D60B14"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />
    <TextView
        android:id="@+id/module_application"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/ubuntu_bold"
        android:text="@string/checklist"
        android:textStyle="bold"
        android:textSize="35sp"
        android:layout_margin="10dp"
        android:textColor="#D60B14"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/application_name" />
    <TextView
        android:id="@+id/text_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="64dp"
        android:textStyle="bold"
        android:fontFamily="@font/ubuntu"
        android:text="@string/usuario"
        android:textSize="18sp"
        android:textColor="#D60B14"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/module_application" />
    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginEnd="64dp"
        android:backgroundTint="#D60B14"
        android:ems="10"
        android:fontFamily="@font/ubuntu"
        android:textSize="16sp"
        android:inputType="textAutoComplete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_username"
        tools:ignore="TextFields"
        android:autofillHints="" />
    <TextView
        android:id="@+id/text_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:textStyle="bold"
        android:layout_marginEnd="64dp"
        android:fontFamily="@font/ubuntu"
        android:text="@string/contrase_a"
        android:textColor="#D60B14"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username" />
    <LinearLayout
        android:id="@+id/layout_password"
        android:layout_marginStart="64dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_pass"
        android:layout_marginEnd="64dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/password"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:backgroundTint="#D60B14"
            android:ems="10"
            android:fontFamily="@font/ubuntu"
            android:textSize="16sp"
            android:inputType="textPassword"
            android:autofillHints="" />
        <ImageView
            android:id="@+id/showHideBtn"
            android:background="@drawable/ic_baseline_visibility_off_24"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:contentDescription="@string/todo">
        </ImageView>
    </LinearLayout>

    <TextView
        android:visibility="gone"
        android:id="@+id/text_pin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="64dp"
        android:textStyle="bold"
        android:fontFamily="@font/ubuntu"
        android:text="@string/pin_de_autenticaci_n_2fa"
        android:textSize="18sp"
        android:textColor="#D60B14"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/module_application" />
    <EditText
        android:visibility="gone"
        android:id="@+id/pincode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginEnd="64dp"
        android:backgroundTint="#D60B14"
        android:ems="10"
        android:maxLength="6"
        android:inputType="number"
        android:fontFamily="@font/ubuntu"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_pin"
        tools:ignore="TextFields"
        android:autofillHints="" />

    <Button
        android:id="@+id/bt_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="60dp"
        android:layout_marginBottom="60dp"
        android:background="@drawable/button_rounded"
        android:fontFamily="@font/ubuntu"
        android:text="@string/iniciar_sesi_n"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/footer"
        tools:layout_editor_absoluteX="60dp" />

    <TextView
        android:visibility="gone"
        android:id="@+id/test_with_other"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="60dp"
        android:layout_marginTop="17dp"
        android:textAlignment="center"
        android:layout_marginBottom="22dp"
        android:fontFamily="@font/ubuntu"
        android:text="PROBAR CON OTRO USUARIO"
        android:textColor="#FAFAFA"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/footer"
        app:layout_constraintTop_toBottomOf="@+id/bt_login"/>

    <RelativeLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:orientation="horizontal"
        android:padding="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/name_version"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:fontFamily="@font/ubuntu"
            android:text="VERSION 20220404"
            android:textColor="#FFFFFF"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/txtBranch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:gravity="right"
            android:text="@string/entorno"
            android:textColor="#FFFFFF"
            android:textSize="14sp"
            tools:ignore="RtlHardcoded" />
    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>