<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:animateLayoutChanges="true"
    android:background="@drawable/fondo_petroperu"
    tools:context=".views.activities.LoginActivity">

    <!--com.andrognito.pinlockview.PinLockView
        android:id="@+id/pin_lock_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" /-->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
            >

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/txtBranch"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/entorno"
                android:textAlignment="center"
                android:textColor="#ffffff"
                android:textSize="18sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="150dp"
                android:src="@drawable/ic_logo_large" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/rellay1"
                android:animateLayoutChanges="true"
                android:visibility="gone">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/name_version"
                        android:layout_marginBottom="30dp"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:textColor="@color/white"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                    </TextView>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_username"
                        app:endIconMode="clear_text"
                        android:id="@+id/text_username"
                        app:endIconTint="@color/colorGris"
                        app:boxBackgroundColor="@color/colorAccentBlank"
                        app:boxStrokeColor="@color/colorAccent"
                        app:counterOverflowTextColor="@color/colorAccent"
                        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
                        >

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/username"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:maxLines="1"
                            android:inputType="text"
                            />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_password"
                        android:layout_marginTop="10dp"
                        app:endIconMode="password_toggle"
                        android:id="@+id/text_pass"
                        app:endIconTint="@color/colorGris"
                        app:boxBackgroundColor="@color/colorAccentBlank"
                        app:boxStrokeColor="@color/colorAccent"
                        app:counterOverflowTextColor="@color/colorAccent"
                        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
                        >

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/password"
                            android:inputType="textPassword"
                            android:maxLines="1"
                            />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="PIN de autenticación 2FA"
                        android:layout_marginTop="10dp"
                        android:id="@+id/text_pin"
                        app:endIconTint="@color/colorGris"
                        app:boxBackgroundColor="@color/colorAccentBlank"
                        app:boxStrokeColor="@color/colorAccent"
                        app:counterOverflowTextColor="@color/colorAccent"
                        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
                        >

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/pincode"
                            android:inputType="number"
                            android:maxLength="6"
                            android:maxLines="1"
                            />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/bt_login"
                        android:layout_width="match_parent"
                        android:layout_height="65dp"
                        android:layout_marginVertical="@dimen/activity_vertical_margin"
                        android:textColor="@color/colorAccentBlank"
                        android:enabled="true"
                        android:text="@string/action_sign_in"
                        android:background="@color/petroperu"
                        />

                </LinearLayout>

            </RelativeLayout>

            <ProgressBar
                android:id="@+id/loading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="32dp"
                android:layout_marginTop="64dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="64dp"
                android:visibility="gone" />
        </LinearLayout>

    </ScrollView>
    <ImageView
        android:visibility="gone"
        android:id="@+id/settings_env"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:src="@drawable/ic_baseline_settings_24"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:contentDescription="@string/todo">

    </ImageView>
</RelativeLayout>