<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="vertical"
        android:gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginVertical="10dp"
            android:paddingHorizontal="5dp"
            android:orientation="horizontal">
                <ImageView
                    android:src="@drawable/ic_check_document"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:contentDescription="@string/app_name" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Check"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:textColor="@color/colorGris" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:paddingHorizontal="15dp"
            android:orientation="horizontal">

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:columnCount="2"
                android:numColumns="auto_fit">
                <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/checkbox_c"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="1dp"
                    android:text="CUMPLE" />

                <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/checkbox_n_c"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="1dp"
                    android:text="NO CUMPLE"
                    android:layout_toRightOf="@+id/checkbox_c"/>

                <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/checkbox_n_a"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="1dp"
                    android:text="NO APLICA"
                    android:layout_toRightOf="@+id/checkbox_n_c"/>

                <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/checkbox_n_v"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="1dp"
                    android:text="NO SE PUEDE VERIFICAR"
                    android:layout_below="@id/checkbox_n_a"
                    android:layout_alignParentRight="true"/>
            </GridLayout>

        </LinearLayout>

        <LinearLayout
            android:paddingHorizontal="15dp"
            android:paddingBottom="10dp"
            android:id="@+id/lnyt_text_inputs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="visible"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ti_observacion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:hint="DESCRIPCIÓN DE LA OBSERVACIÓN"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/et_observaciones"
                    android:inputType="textMultiLine"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:endIconMode="none"
                android:visibility="gone"
                app:endIconTint="@color/colorGris"
                android:hint="LEVANTAMIENTO DE OBSERVACIÓN"
                android:layout_marginTop="5dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_lev"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="55dp"
                app:endIconMode="none"
                android:visibility="gone"
                app:endIconTint="@color/colorGris"
                android:hint="FECHA DE LEVANTAMIENTO DE OBSERVACIÓN"
                android:layout_marginTop="5dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_f_lev"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:clickable="true"
                    android:inputType="text"
                    android:maxLines="1"/>
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/layout_register_photo"
            android:layout_marginTop="15dp"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_below="@+id/form_general_slope"
                android:id="@+id/header_photo"
                android:layout_width="0dp"
                android:textStyle="bold"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/registro_de_fotos_de_evidencia"/>
            <Button
                android:id="@+id/take_photo"
                android:text="@string/photo"
                android:backgroundTint="@color/colorAccentBlank"
                android:layout_marginRight="5dp"
                android:textColor="@color/black"
                android:drawableLeft="@drawable/ic_add_a_photo_black_24dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recicler_photos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/header_photo"
            android:padding="15dp"
            android:scrollbars="horizontal"
            android:visibility="visible">

        </androidx.recyclerview.widget.RecyclerView>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:paddingBottom="10dp"
            android:layout_gravity="right"
            android:layout_height="wrap_content">
            <Button android:id="@+id/btn_cancel"
                android:text="Cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"/>
            <Button android:id="@+id/btn_ok"
                android:text="Ok"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"/>
        </LinearLayout>
    </LinearLayout>
</FrameLayout>